# pytest-kumar

./: README.md  pytest_cheat_sheet.md
01-pytest-101/: pyproject.toml  pytest.ini
01-pytest-101/05-skip-mark/: test_skiptests.py
01-pytest-101/bdd_pytest/: test_bdd101.py  test_bddfixtures.py  test_bddoutline.py  test_bddparameterize.py
01-pytest-101/bdd_pytest/myfeatures/: first101.feature  fixtures.feature  parameterize.feature  scenariooutline.feature
01-pytest-101/py_addoption/: conftest.py  prod.prop  test_argstest.py
01-pytest-101/py_assertions/: conftest.py  test_module01.py  test_module02-re.py  test_module02.py  test_module03.py
01-pytest-101/py_fixture_parameterize/: test_paramterize.py
01-pytest-101/py_fixtures/: conftest.py  test_fixtures01.py  test_fixtures02.py  test_fixtures03.py  test_fixtures04.py  test_fixtures05.py
01-pytest-101/py_parameterize/: test_paramterize.py
01-pytest-101/py_read_file_config/: test_data_provider.py  test_getconfigdata.py
01-pytest-101/py_skip_mark/: test_markers.py  test_skiptests.py  test_xfail.py
01-pytest-101/pytest_topics/: test_module01.py
01-pytest-101/utils/: ConfigFileParser.py  myconfigparser.py  test_data_provider.py  util.py
