[tool.poetry]
name = "01-pytest-101"
version = "0.0.1"
description = ""
authors = ["Noah Kim <dongwoo_333@hanmail.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
